--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "protractor-beautiful-reporter",
-  "version": "1.3.6-alpha-1",
+  "name": "@laurentgoudet/jasmine-beautiful-reporter",
+  "version": "0.0.1",
   "description": "An npm module and which generates your Protractor test reports in HTML (angular) with screenshots",
   "main": "index.js",
   "repository": {
